static yolu ve resim klasoru duzeltildi

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -30,7 +30,7 @@
                 <div class="card-body">
                     <h5 class="card-title text-primary"><%= ihale.title %></h5>
     <% if (ihale.image_url) { %>
-        <img src="/static/images/<%= ihale.image_url %>" class="card-img-top" alt="Ürün Resmi" style="height: 200px; object-fit: cover;">
+        <img src="/static/uploads/<%= ihale.image_url %>" class="card-img-top" alt="Ürün Resmi" style="height: 200px; object-fit: cover;">
     <% } %>
 
         <div class="card-body">
