--- a/views/home.ejs
+++ b/views/home.ejs
@@ -52,7 +52,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
         <div class="container">
             <a class="navbar-brand fw-bold" href="/">
-                🔥 İhale<span class="text-primary">Paneli</span>
+                 İhale<span class="text-primary">Paneli</span>
             </a>
             
             <div class="d-flex gap-2">
