resim klasor yolu duzeltildi

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -116,7 +116,7 @@
   <nav class="navbar navbar-dark mb-5 shadow-sm">
       <div class="container">
           <a class="navbar-brand fw-bold" href="/">
-              🔥 İhale<span class="text-primary">Paneli</span>
+               İhale<span class="text-primary">Paneli</span>
           </a>
           <a href="/" class="btn btn-sm btn-outline-light">
               <i class="fas fa-home"></i> Ana Sayfa
